k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  name: akeyless-custom-ui-rotator-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: custom-ui-rotator.cg.cs.akeyless.fans
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: akeyless-custom-ui-rotator-service
                port:
                  number: 80
            path: /
  tls: # < placing a host in the TLS config will indicate a cert should be created
    - hosts:
        - custom-ui-rotator.cg.cs.akeyless.fans
      secretName: akeyless-custom-ui-rotator-tls # < cert-manager will store the created certificate in this secret.
